# toy-projects

./: .gitignore
ExtSort/: CMakeLists.txt  main.cpp
QtDungeons/: QtDungeons.pro  eviltypeeditor.cpp  eviltypeeditor.h  main.cpp  stubmodel.cpp  stubmodel.h
QtDungeons/doc/: article.rtf  article.txt
moscowbeat/R/: clocks.csv  experiments.r
qt-emoji/: README.md  emojipopupwindow.cpp  emojipopupwindow.h  emojiprovider.cpp  emojiprovider.h  emojitablemodel.cpp  emojitablemodel.h  emojitextedit.cpp  emojitextedit.h  emojitextobject.cpp  emojitextobject.h  main.cpp  mainchatwindow.cpp  mainchatwindow.h  qt-emoji.pro
qt-emoji/res/: resources.qrc
quwi/: CMakeLists.txt  http-auth.cpp  http-auth.h  main.cpp  projectsmodel.cpp  projectsmodel.h
quwi/qml/: MainWindow.qml
render/: CMakeLists.txt  main.cpp
xmltreeviewer/: README.md  patch.diff
